# GEMDetectorSim

./: .gitignore  CMakeLists.txt  GEMDetector.cc  init_vis.mac  vis.mac
include/: DipoleMagnet.hh  GEMDetector.hh  GEMDetectorConstruction.hh  GEMSensitiveDetector.hh  HitRecord.hh  HoneycombBuilder.hh  Materials.hh  PrimaryGeneratorAction.hh  RootOutputManager.hh
scripts/: analyze_all.C  analyze_all_planes.C  analyze_all_safe.C  analyze_hits.C  compare_two_files.C  compare_two_planes.C
src/: DipoleMagnet.cc  GEMDetector.cc  GEMDetectorConstruction.cc  GEMSensitiveDetector.cc  HoneycombBuilder.cc  Materials.cc  PrimaryGeneratorAction.cc  RootOutputManager.cc
